--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@sveltejs/adapter-node": "^5.0.0",
     "@sveltejs/kit": "^2.0.0",
     "better-auth": "^1.0.0",
     "better-sqlite3": "^11.0.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.38.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "lucide-svelte": "^0.562.0",
     "parse-torrent": "^11.0.0",
     "parse-torrent-title": "^2.1.0",
-    "webtorrent": "^2.5.1",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "fluent-ffmpeg": "^2.1.3"
+    "tailwind-merge": "^3.4.0",
+    "webtorrent": "^2.5.1"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
