Deploy stuff. THe hard part...

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-ENABLE_FILE_STORAGE=false
-DATABASE_URL=/app/db/plank.db
-TMDB_API_KEY=your_tmdb_api_key
-BETTER_AUTH_SECRET=your_secret_key_here
+# Database
+DATABASE_URL=./plank.db
+
+# Storage (enable for self-hosted only)
+DATA_PATH=./data
+
+# TMDB (Metadata)
+TMDB_API_KEY=
+
+# Authentication (Better Auth)
+BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:5173
