--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,24 +1,35 @@
-FROM node:20-slim
-
-RUN apt-get update && apt-get install -y \
-    python3 \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
+FROM node:22-alpine
 
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm ci
+# Install all deps (including dev) for build
+# Use npm install instead of ci to ensure platform-specific optional deps (like rollup-linux) are resolved
+RUN npm install
 
 COPY . .
+
+# Set dummy secrets for build time - better-auth validates these during build
+# Real values are provided at runtime via docker-compose environment
+ARG BETTER_AUTH_SECRET=dummy-build-secret-replace-at-runtime
+ARG BETTER_AUTH_URL=http://localhost:3000
+ENV BETTER_AUTH_SECRET=$BETTER_AUTH_SECRET
+ENV BETTER_AUTH_URL=$BETTER_AUTH_URL
+
 RUN npm run build
+
+# Remove dev deps to keep image light, then reinstall only drizzle-kit for migrations
+RUN npm prune --production && npm install drizzle-kit
 
 # Create necessary directories
 RUN mkdir -p /app/db /app/data/library /app/data/temp
+
+# Make entrypoint executable (already copied via COPY . .)
+RUN chmod +x /app/docker/entrypoint.sh
 
 ENV NODE_ENV=production
 
 EXPOSE 3000
 EXPOSE 6881
 
-CMD ["node", "build"]
+ENTRYPOINT ["/app/docker/entrypoint.sh"]
