--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@sveltejs/kit": "^2.0.0",
     "@types/node-cron": "^3.0.11",
     "better-auth": "^1.0.0",
-    "better-sqlite3": "^11.0.0",
+    "better-sqlite3": "^12.0.0",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.38.0",
+    "drizzle-orm": "^0.45.1",
     "fluent-ffmpeg": "^2.1.3",
     "lucide-svelte": "^0.562.0",
     "node-cron": "^4.2.1",
@@ -38,7 +38,8 @@
     "@tailwindcss/vite": "^4.0.0",
     "@types/better-sqlite3": "^7.0.0",
     "@types/fluent-ffmpeg": "^2.1.27",
-    "drizzle-kit": "^0.30.0",
+    "@vitest/coverage-v8": "4.0.17",
+    "drizzle-kit": "^0.31.8",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0",
