--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   plank:
     build:
@@ -7,14 +5,19 @@ services:
       dockerfile: docker/Dockerfile
     ports:
       - "3300:3000"
+      - "6881:6881/tcp"
+      - "6881:6881/udp"
     environment:
-      - ENABLE_FILE_STORAGE=false
+      - ENABLE_FILE_STORAGE=true
       - DATABASE_URL=/app/db/plank.db
       - TMDB_API_KEY=${TMDB_API_KEY}
       - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET}
       - BETTER_AUTH_URL=${BETTER_AUTH_URL:-http://localhost:3000}
     volumes:
       - plank-db:/app/db
+      - plank-data:/app/data
+      - ${MEDIA_PATH:-./media}:/app/data/library
 
 volumes:
   plank-db:
+  plank-data:
