--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "lint": "biome check --write .",
+    "format": "biome format --write .",
+    "prepare": "lefthook install"
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
@@ -34,16 +36,19 @@
     "webtorrent": "^2.5.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/better-sqlite3": "^7.0.0",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@vitest/coverage-v8": "4.0.17",
     "drizzle-kit": "^0.31.8",
+    "lefthook": "^2.0.15",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
+    "ultracite": "^7.0.12",
     "vite": "^6.0.0",
     "vitest": "^4.0.17"
   }
