--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json --watch",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -46,7 +46,6 @@
     "lefthook": "^2.0.15",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "svelte-check-rs": "^0.6.8",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
     "ultracite": "^7.0.12",
