Basic tv show support

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json | biome check --write .",
+    "check:watch": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json --watch | biome check --write . --watch",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
