--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,11 +13,47 @@ services:
       - TMDB_API_KEY=${TMDB_API_KEY}
       - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET}
       - BETTER_AUTH_URL=${BETTER_AUTH_URL:-http://localhost:3000}
+      - JACKETT_URL=http://jackett:9117
+      - JACKETT_API_KEY=${JACKETT_API_KEY:-plank0default0jackett0api0key1}
     volumes:
       - plank-db:/app/db
       - plank-data:/app/data
       - ${MEDIA_PATH:-./media}:/app/data/library
+    depends_on:
+      - jackett
+
+  jackett:
+    image: lscr.io/linuxserver/jackett:latest
+    container_name: jackett
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=${TZ:-America/New_York}
+      - AUTO_UPDATE=true
+    volumes:
+      - jackett-config:/config
+      - ./jackett/ServerConfig.json:/config/Jackett/ServerConfig.json
+      - jackett-downloads:/downloads
+    ports:
+      - "9117:9117"
+    restart: unless-stopped
+    depends_on:
+      - flaresolverr
+
+  flaresolverr:
+    image: ghcr.io/flaresolverr/flaresolverr:latest
+    container_name: flaresolverr
+    environment:
+      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - LOG_HTML=${LOG_HTML:-false}
+      - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
+      - TZ=${TZ:-America/New_York}
+    ports:
+      - "8191:8191"
+    restart: unless-stopped
 
 volumes:
   plank-db:
   plank-data:
+  jackett-config:
+  jackett-downloads:
