--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@sveltejs/adapter-node": "^5.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@types/node-cron": "^3.0.11",
-    "better-auth": "^1.0.0",
+    "better-auth": "1.4.17",
     "better-sqlite3": "^12.0.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
