Readme and .env.example update

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,22 @@
 # Database
 DATABASE_URL=./plank.db
 
-# Storage (enable for self-hosted only)
+# Where the files are saved when downloaded
 DATA_PATH=./data
 
-# TMDB (Metadata)
+# Get yours here https://www.themoviedb.org/settings/api
 TMDB_API_KEY=
 
-# Authentication (Better Auth)
-BETTER_AUTH_SECRET=super-secret-32-char-string
-BETTER_AUTH_URL=http://localhost:3000
+# Jackett (Torrent Search)
+JACKETT_URL=http://localhost:9117
+JACKETT_API_KEY=plank0default0jackett0api0key1
 
+# Authentication (Better Auth)
+AUTH_SECRET=super-secret-32-char-string
+AUTH_URL=http://localhost:3300
+
+# Reserved for future functionality. Keep as true
 ENABLE_FILE_STORAGE=true
 
-VITE_AUTH_URL=http://localhost:3000
-BETTER_AUTH_TELEMETRY=0
-PORT=3000
+VITE_AUTH_URL=http://localhost:3300
+PORT=3300
