--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json | biome check --write .",
-    "check:watch": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json --watch | biome check --write . --watch",
+    "check": "svelte-kit sync && svelte-check-rs --tsconfig ./tsconfig.json | biome check --write .",
+    "check:watch": "svelte-kit sync && svelte-check-rs --tsconfig ./tsconfig.json --watch | biome check --write . --watch",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -16,6 +16,7 @@
     "db:push": "drizzle-kit push",
     "lint": "biome check --write .",
     "format": "biome format --write .",
+    "knip": "knip",
     "prepare": "lefthook install"
   },
   "dependencies": {
@@ -43,9 +44,10 @@
     "@types/fluent-ffmpeg": "^2.1.27",
     "@vitest/coverage-v8": "4.0.17",
     "drizzle-kit": "^0.31.8",
+    "knip": "^5.82.1",
     "lefthook": "^2.0.15",
     "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
+    "svelte-check-rs": "^0.6.9",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.0.0",
     "ultracite": "^7.0.12",
