--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check-rs --tsconfig ./tsconfig.json | biome check --write .",
-    "check:watch": "svelte-kit sync && svelte-check-rs --tsconfig ./tsconfig.json --watch | biome check --write . --watch",
+    "check": "svelte-kit sync && svelte-check-rs --tsconfig ./tsconfig.json && npx ultracite fix",
+    "check:watch": "svelte-kit sync && svelte-check-rs --tsconfig ./tsconfig.json --watch && npx ultracite fix --watch",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -20,38 +20,38 @@
     "prepare": "lefthook install"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@sveltejs/adapter-node": "^5.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@types/node-cron": "^3.0.11",
+    "@ffmpeg-installer/ffmpeg": "1.1.0",
+    "@sveltejs/adapter-node": "5.5.2",
+    "@sveltejs/kit": "2.50.1",
+    "@types/node-cron": "3.0.11",
     "better-auth": "1.4.17",
-    "better-sqlite3": "^12.0.0",
-    "clsx": "^2.1.1",
+    "better-sqlite3": "12.6.2",
+    "clsx": "2.1.1",
     "drizzle-orm": "^0.45.1",
-    "fluent-ffmpeg": "^2.1.3",
-    "lucide-svelte": "^0.562.0",
-    "node-cron": "^4.2.1",
-    "parse-torrent": "^11.0.0",
-    "parse-torrent-title": "^2.1.0",
-    "tailwind-merge": "^3.4.0",
-    "webtorrent": "^2.5.1"
+    "fluent-ffmpeg": "2.1.3",
+    "lucide-svelte": "0.563.0",
+    "node-cron": "4.2.1",
+    "parse-torrent": "11.0.19",
+    "parse-torrent-title": "2.1.0",
+    "tailwind-merge": "3.4.0",
+    "webtorrent": "2.8.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.11",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/better-sqlite3": "^7.0.0",
-    "@types/fluent-ffmpeg": "^2.1.27",
+    "@biomejs/biome": "2.3.12",
+    "@sveltejs/vite-plugin-svelte": "6.2.4",
+    "@tailwindcss/vite": "4.1.18",
+    "@types/better-sqlite3": "7.6.13",
+    "@types/fluent-ffmpeg": "2.1.28",
     "@vitest/coverage-v8": "4.0.17",
-    "drizzle-kit": "^0.31.8",
-    "knip": "^5.82.1",
-    "lefthook": "^2.0.15",
-    "svelte": "^5.0.0",
-    "svelte-check-rs": "^0.6.9",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.0.0",
-    "ultracite": "^7.0.12",
-    "vite": "^6.0.0",
+    "drizzle-kit": "0.31.8",
+    "knip": "5.82.1",
+    "lefthook": "2.0.15",
+    "svelte": "5.48.0",
+    "svelte-check-rs": "0.6.10",
+    "tailwindcss": "4.1.18",
+    "typescript": "5.9.3",
+    "ultracite": "7.0.12",
+    "vite": "7.3.1",
     "vitest": "^4.0.17"
   }
 }
