Fixing docker deploy

--- a/.env.example
+++ b/.env.example
@@ -11,12 +11,11 @@ TMDB_API_KEY=
 JACKETT_URL=http://localhost:9117
 JACKETT_API_KEY=plank0default0jackett0api0key1
 
-# Authentication (Better Auth)
-AUTH_SECRET=super-secret-32-char-string
-AUTH_URL=http://localhost:3300
+# Authentication
+BETTER_AUTH_SECRET=super-secret-32-char-string
+BETTER_AUTH_URL=http://localhost:3300
 
 # Reserved for future functionality. Keep as true
 ENABLE_FILE_STORAGE=true
 
-VITE_AUTH_URL=http://localhost:3300
 PORT=3300
