Tanstack query migration

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ffmpeg-installer/ffmpeg": "1.1.0",
     "@sveltejs/adapter-node": "5.5.2",
     "@sveltejs/kit": "2.50.1",
+    "@tanstack/svelte-query": "^6.0.18",
+    "@tanstack/svelte-query-devtools": "^6.0.3",
     "@types/node-cron": "3.0.11",
     "better-auth": "1.4.17",
     "better-sqlite3": "12.6.2",
