--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "1.1.0",
+    "@lucide/svelte": "^0.563.1",
     "@sveltejs/adapter-node": "5.5.2",
     "@sveltejs/kit": "2.50.1",
     "@tanstack/svelte-query": "^6.0.18",
@@ -31,7 +32,6 @@
     "clsx": "2.1.1",
     "drizzle-orm": "^0.45.1",
     "fluent-ffmpeg": "2.1.3",
-    "lucide-svelte": "0.563.0",
     "node-cron": "4.2.1",
     "parse-torrent": "11.0.19",
     "parse-torrent-title": "2.1.0",
