More test coverage and consolidated some routes. Migrated fully to tanstack query

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json && npx ultracite fix",
     "check:watch": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json --watch && npx ultracite fix --watch",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
+    "test": "bun x vitest run",
+    "test:watch": "bun x vitest",
+    "test:coverage": "bun x vitest run --coverage",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
