--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-cron": "4.2.1",
     "parse-torrent": "11.0.19",
     "parse-torrent-title": "2.1.0",
+    "svelte-sonner": "^1.0.7",
     "tailwind-merge": "3.4.0",
     "webtorrent": "2.8.5"
   },
