Knip added to check script

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json && npx ultracite fix",
-    "check:watch": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json --watch && npx ultracite fix --watch",
+    "check": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json && npx ultracite fix && npm run knip",
+    "check:watch": "svelte-kit sync && npx svelte-check-rs --tsconfig ./tsconfig.json --watch && npx ultracite fix --watch && npm run knip",
     "test": "bun x vitest run",
     "test:watch": "bun x vitest",
     "test:coverage": "bun x vitest run --coverage",
