--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,9 @@ DATA_PATH=./data
 # Get yours here https://www.themoviedb.org/settings/api
 TMDB_API_KEY=
 
-# Jackett (Torrent Search)
-JACKETT_URL=http://localhost:9117
-JACKETT_API_KEY=plank0default0jackett0api0key1
+# Prowlarr (Torrent Search)
+PROWLARR_URL=http://localhost:9696
+PROWLARR_API_KEY=
 
 # Authentication
 BETTER_AUTH_SECRET=super-secret-32-char-string
