--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ TMDB_API_KEY=
 
 # Prowlarr (Torrent Search)
 PROWLARR_URL=http://localhost:9696
+PUBLIC_PROWLARR_URL=${PROWLARR_URL}
 PROWLARR_API_KEY=
 
 # Authentication
