--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -39,6 +39,7 @@ services:
     depends_on:
       prowlarr:
         condition: service_started
+    restart: unless-stopped
 
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
