--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,13 @@ TMDB_API_KEY=
 # Prowlarr (Torrent Search)
 PROWLARR_URL=http://localhost:9696
 PUBLIC_PROWLARR_URL=${PROWLARR_URL}
-PROWLARR_API_KEY=
+PROWLARR_API_KEY=  # We recommend leaving this blank when running Plank fully self hosted. We configure this automatically
+
+# OpenSubtitles (Subtitle Downloads)
+# Get API key at https://www.opensubtitles.com/consumers
+OPENSUBTITLES_API_KEY=
+OPENSUBTITLES_USERNAME=
+OPENSUBTITLES_PASSWORD=
 
 # Authentication
 BETTER_AUTH_SECRET=super-secret-32-char-string
