--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,7 +1,7 @@
-FROM node:22-bookworm-slim
+FROM node:22
 
 # Install git for lefthook and curl for healthcheck
-RUN apt-get update && apt-get install -y curl ca-certificates
+RUN apt-get update && apt-get install -y curl ca-certificates ffmpeg
 
 WORKDIR /app
 
@@ -12,8 +12,8 @@ RUN npm ci
 
 COPY . .
 
-# Make scripts executable
-RUN chmod +x /app/docker/entrypoint.sh /app/docker/configure-prowlarr.sh
+RUN chmod +x /app/docker/entrypoint.sh \
+  /app/docker/configure-prowlarr.sh
 
 EXPOSE 3300 6881
 
