--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "1.1.0",
-    "@lucide/svelte": "^0.563.1",
-    "@sveltejs/adapter-node": "5.5.2",
-    "@sveltejs/kit": "2.50.1",
-    "@tanstack/svelte-query": "^6.0.18",
-    "@tanstack/svelte-query-devtools": "^6.0.3",
+    "@lucide/svelte": "0.575.0",
+    "@sveltejs/adapter-node": "5.5.3",
+    "@sveltejs/kit": "2.53.0",
+    "@tanstack/svelte-query": "6.0.18",
+    "@tanstack/svelte-query-devtools": "6.0.4",
     "@types/node-cron": "3.0.11",
     "better-auth": "1.4.17",
     "better-sqlite3": "12.6.2",
@@ -35,8 +35,8 @@
     "node-cron": "4.2.1",
     "parse-torrent": "11.0.19",
     "parse-torrent-title": "2.1.0",
-    "svelte-sonner": "^1.0.7",
-    "tailwind-merge": "3.4.0",
+    "svelte-sonner": "1.0.7",
+    "tailwind-merge": "3.5.0",
     "vidstack": "^1.12.13",
     "webtorrent": "2.8.5"
   },
