--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-cron": "4.2.1",
     "parse-torrent": "11.0.19",
     "parse-torrent-title": "2.1.0",
+    "sharp": "0.34.5",
     "svelte-sonner": "1.0.7",
     "tailwind-merge": "3.5.0",
     "vidstack": "^1.12.13",
@@ -46,6 +47,7 @@
     "@tailwindcss/vite": "4.1.18",
     "@types/better-sqlite3": "7.6.13",
     "@types/fluent-ffmpeg": "2.1.28",
+    "@types/sharp": "^0.31.1",
     "@vitest/coverage-v8": "4.0.17",
     "drizzle-kit": "0.31.8",
     "knip": "5.82.1",
