--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "clsx": "2.1.1",
     "drizzle-orm": "^0.45.1",
     "fluent-ffmpeg": "2.1.3",
+    "jimp": "^1.6.0",
     "node-cron": "4.2.1",
     "parse-torrent": "11.0.19",
     "parse-torrent-title": "2.1.0",
-    "sharp": "0.34.5",
     "svelte-sonner": "1.0.7",
     "tailwind-merge": "3.5.0",
     "vidstack": "^1.12.13",
@@ -47,7 +47,6 @@
     "@tailwindcss/vite": "4.1.18",
     "@types/better-sqlite3": "7.6.13",
     "@types/fluent-ffmpeg": "2.1.28",
-    "@types/sharp": "^0.31.1",
     "@vitest/coverage-v8": "4.0.17",
     "drizzle-kit": "0.31.8",
     "knip": "5.82.1",
